--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -5,11 +5,29 @@
 <app-menu-tilte></app-menu-tilte>
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card></app-big-card>
+        <app-big-card
+            photoCover="https://avatars.githubusercontent.com/u/95722246?s=400&u=3f06f04fc42beeffcd790624964d0816199fa11a&v=4"
+            cardTitle="Frontend Developer/Angular"
+            cardDescription="TypeScript, HTML, CSS, JavaScript, Node, Java, UI/UX, Figma, MySQL, Git, GitHub, Metodologia Ágil Scrum"
+            othersInformations="Ensino Superior, fluência em inglês e italiano, experiência internacional em Portugal, Itália, Inglaterra e Irlanda, dupla-cidadania brasileira e italiana"
+        >
+    </app-big-card>
     </div>
     <div class="articles__others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+            photoCover="https://picsum.photos/200/300"
+            cardTitle="Buzz Developer"
+        >
+        </app-small-card>
+        <app-small-card
+            photoCover="https://picsum.photos/400/400"
+            cardTitle="Buzz Developer"
+        >
+        </app-small-card>
+        <app-small-card
+            photoCover="https://picsum.photos/600/500"
+            cardTitle="Buzz Developer"
+        >
+        </app-small-card>
     </div>
 </div>
