--- a/src/app/components/big-card/big-card.css
+++ b/src/app/components/big-card/big-card.css
@@ -1,11 +1,12 @@
 .container__big-card {
     width: 400px;
-    height: 500px;
+    height: 800px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     margin-left: 10px;
+    margin-right: 10px;
 }
 
 .photo__big-card > img {
