--- a/src/app/components/small-card/small-card.html
+++ b/src/app/components/small-card/small-card.html
@@ -1,13 +1,12 @@
 <div class="container__small-card">
     <div class="container__small-card__content">
         <div class="photo__small-card">
-        <img 
-            src="https://picsum.photos/200/300" 
+        <img src="{{ photoCover}}" 
             alt="Small Card Image"
             height="200px">
         </div>        
         <div class="title__small-card">
-            <h3>Small Card Title</h3
+            <h3>{{ cardTitle }}</h3
         >
         </div>
     </div>
